<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Indicates that rerouting is in progress -->
    <string name="mapbox_rerouting">Rerouting…</string>

    <!-- Button title for re-centering tracking -->
    <string name="mapbox_re_center">Re-center</string>

    <!-- Indicates voice instructions are muted -->
    <string name="mapbox_muted">Muted</string>

    <!-- Indicates voice instructions are unmuted -->
    <string name="mapbox_unmuted">Unmuted</string>

    <!-- Max Speed Limit -->
    <string name="max_speed">MAX\n%1$d</string>

    <!-- Feedback -->
    <string name="mapbox_report_feedback">Report feedback</string>

    <!-- Feedback Guidance Issue -->
    <string name="mapbox_feedback_guidance_issue">Guidance Issue</string>

    <!-- Feedback type for Looks Incorrect -->
    <string name="mapbox_feedback_type_looks_incorrect">Looks\nIncorrect</string>

    <!-- Feedback type for Confusing Audio -->
    <string name="mapbox_feedback_type_confusing_audio">Confusing\nAudio</string>

    <!-- Feedback type for Positioning Issue -->
    <string name="mapbox_feedback_type_positioning_issue">Positioning\nIssue</string>

    <!-- Feedback Navigation Issue -->
    <string name="mapbox_feedback_navigation_issue">Navigation Issue</string>

    <!-- Feedback type for Route Quality -->
    <string name="mapbox_feedback_type_route_quality">Route\nQuality</string>

    <!-- Feedback type for Illegal Route -->
    <string name="mapbox_feedback_type_illegal_route">Illegal\nRoute</string>

    <!-- Feedback type for Road Closure -->
    <string name="mapbox_feedback_type_road_closure">Road\nClosure</string>

    <!-- Feedback type general feedback, such as final arrival experience feedback -->
    <string name="mapbox_feedback_type_general">General</string>

    <!-- Shown after a feedback type or final arrival experience feedback has been submitted -->
    <string name="mapbox_feedback_reported">Thank you for your feedback</string>

    <!-- Shown if final arrival experience feedback text is empty upon submission -->
    <string name="mapbox_feedback_arrival_experience_empty">Feedback is empty</string>

    <!-- Feedback description for Looks Incorrect -->
    <string name="mapbox_feedback_description_turn_icon_incorrect">Turn icon incorrect</string>
    <string name="mapbox_feedback_description_street_name_incorrect">Street name incorrect</string>
    <string name="mapbox_feedback_description_instruction_unnecessary">Instruction unnecessary</string>
    <string name="mapbox_feedback_description_instruction_missing">Instruction missing</string>
    <string name="mapbox_feedback_description_maneuver_incorrect">Maneuver incorrect</string>
    <string name="mapbox_feedback_description_exit_info_incorrect">Exit info incorrect</string>
    <string name="mapbox_feedback_description_lane_guidance_incorrect">Lane guidance incorrect</string>
    <string name="mapbox_feedback_description_road_known_by_different_name">Road known by different name</string>

    <!-- Feedback description for Confusing Audio -->
    <string name="mapbox_feedback_description_guidance_too_early">Guidance too early</string>
    <string name="mapbox_feedback_description_guidance_too_late">Guidance too late</string>
    <string name="mapbox_feedback_description_pronunciation_incorrect">Pronunciation incorrect</string>
    <string name="mapbox_feedback_description_road_name_repeated">Road name repeated</string>

    <!-- Feedback description for Route Quality -->
    <string name="mapbox_feedback_description_route_not_drive_able">Route not drive-able</string>
    <string name="mapbox_feedback_description_route_not_preferred">Route not preferred</string>
    <string name="mapbox_feedback_description_alternative_route_not_expected">Alternative route not expected</string>
    <string name="mapbox_feedback_description_route_included_missing_roads">Route included missing roads</string>
    <string name="mapbox_feedback_description_route_had_roads_too_narrow_to_pass">Route had roads too narrow to pass</string>

    <!-- Feedback description for Illegal Route -->
    <string name="mapbox_feedback_description_routed_down_a_one_way">Routed down a one-way</string>
    <string name="mapbox_feedback_description_turn_was_not_allowed">Turn was not allowed</string>
    <string name="mapbox_feedback_description_cars_not_allowed_on_street">Cars not allowed on street</string>
    <string name="mapbox_feedback_description_turn_at_intersection_was_unprotected">Turn at intersection was unprotected</string>

    <!-- Feedback description for Road Closure -->
    <string name="mapbox_feedback_description_street_permanently_blocked_off">Street permanently blocked off</string>
    <string name="mapbox_feedback_description_road_is_missing_from_map">Road is missing from map</string>

    <!-- Feedback description for Arrival Feedback Not Good -->
    <string name="mapbox_feedback_description_wrong_location">Wrong location</string>
    <string name="mapbox_feedback_description_wrong_entrance">Wrong entrance</string>
    <string name="mapbox_feedback_description_confusing_instructions">Confusing Instructions</string>
    <string name="mapbox_feedback_description_this_place_is_closed">This place is closed</string>

    <!-- Shown after a feedback type has been submitted -->
    <string name="mapbox_feedback_submitted">Feedback Submitted</string>

    <string name="mapbox_feedback_details_flow_title">You have arrived</string>
    <string name="mapbox_feedback_details_flow_start">Start</string>
    <string name="mapbox_feedback_details_flow_back">Back</string>
    <string name="mapbox_feedback_details_flow_next">Next</string>
    <string name="mapbox_feedback_details_flow_done">Done</string>
    <string name="mapbox_feedback_arrival_finish">Finish</string>

    <!-- Add more feedback comments TextView text -->
    <string name="mapbox_feedback_add_more_comments">Add more comments</string>
    <!-- Description for the feedback comment EditText View -->
    <string name="mapbox_feedback_comment_edit_text_description">(Optional)</string>
    <!-- Provide feedback details TextView text  -->
    <string name="mapbox_feedback_provide_details">Please provide details on your reported issues</string>

    <!-- Provide arrival experience TextView texts  -->
    <string name="mapbox_feedback_arrival_feedback">Arrival Feedback</string>
    <string name="mapbox_feedback_arrival_experience_question">How was your routing\nexperience?</string>
    <string name="mapbox_feedback_arrival_experience_good">Good</string>
    <string name="mapbox_feedback_arrival_experience_not_good">Not good</string>

    <!-- Shown in off-route scenarios to provide feedback -->
    <string name="mapbox_report_problem">Report Problem</string>

    <!-- Feedback screenshot image view content description -->
    <string name="mapbox_feedback_screenshot_content_description">This is a feedback screenshot image view.</string>

    <!-- Should not be translated -->
    <string name="mapbox_navigation_guidance_day"
            translatable="false">mapbox://styles/mapbox/navigation-day-v1</string>
    <string name="mapbox_navigation_guidance_night"
            translatable="false">mapbox://styles/mapbox/navigation-night-v1</string>
    <string name="mapbox_navigation_view_instance_state"
            translatable="false">navigation_view_instance_state</string>
    <string name="mapbox_navigation_running"
            translatable="false">navigation_running</string>
</resources>