<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/feedbackDetailsFlowStartButton"
      android:layout_width="match_parent"
      android:layout_height="45dp"
      android:layout_marginEnd="100dp"
      android:layout_marginStart="100dp"
      android:background="@drawable/mapbox_bg_feedback_bottom_sheet_button_blue"
      android:text="@string/mapbox_feedback_details_flow_start"
      android:textColor="@android:color/white"
      android:textSize="18sp"
      android:textAllCaps="false"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/feedbackDetailsFlowBackButton"
      android:layout_width="wrap_content"
      android:layout_height="45dp"
      android:layout_marginStart="26dp"
      android:background="@drawable/mapbox_bg_feedback_bottom_sheet_button_gray"
      android:paddingEnd="32dp"
      android:paddingStart="32dp"
      android:text="@string/mapbox_feedback_details_flow_back"
      android:textColor="#273d56"
      android:textSize="18sp"
      android:textAllCaps="false"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/feedbackDetailsFlowNextButton"
      android:layout_width="wrap_content"
      android:layout_height="45dp"
      android:layout_marginEnd="26dp"
      android:background="@drawable/mapbox_bg_feedback_bottom_sheet_button_blue"
      android:paddingEnd="32dp"
      android:paddingStart="32dp"
      android:textAllCaps="false"
      android:text="@string/mapbox_feedback_details_flow_next"
      android:textColor="@android:color/white"
      android:textSize="18sp"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

</androidx.constraintlayout.widget.ConstraintLayout>